...
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  <!--      android:text="Share your location with your family or freinds!"
-->
  <Button
      android:id="@+id/button_get_started"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    android:padding="16dp"
      android:layout_margin="32dp"
      android:background="@drawable/button_background"
      android:backgroundTint="@color/colorAccent"
...
